[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Furniture/robot station door.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/Furniture/robot station shell.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Furniture/Robot Station.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.15, 1.5, 1.8 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.376471, 0.376471, 0.376471, 1 )
metallic = 1.0
roughness = 0.86

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.7, 1.45, 0.05 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.0588235, 0.568627, 0, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Close Door"
tracks/0/type = "value"
tracks/0/path = NodePath("Door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 4.55, 1.75 ), Vector3( 0, 1.55, 1.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Occupied Light:material/0:emission_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Unoccupied Light:material/0:emission_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Door:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Occupied Light:material/0:albedo_color")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.145098, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Unoccupied Light:material/0:albedo_color")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.101961, 1, 0, 1 ), Color( 0.0313726, 0.313726, 0, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Instant Open Door"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4.55, 1.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Occupied Light:material/0:emission_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Unoccupied Light:material/0:emission_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Door:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Unoccupied Light:material/0:albedo_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.101961, 1, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Occupied Light:material/0:albedo_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.145098, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Open Door"
tracks/0/type = "value"
tracks/0/path = NodePath("Door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.55, 1.75 ), Vector3( 0, 4.55, 1.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Occupied Light:material/0:emission_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Unoccupied Light:material/0:emission_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Door:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Unoccupied Light:material/0:albedo_color")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.313726, 0, 1 ), Color( 0.101961, 1, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Occupied Light:material/0:albedo_color")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.145098, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.55, 1.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Door:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Occupied Light:material/0:emission_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Unoccupied Light:material/0:emission_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Door:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Occupied Light:material/0:albedo_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Unoccupied Light:material/0:albedo_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0588235, 0.568627, 0, 1 ) ]
}

[sub_resource type="BoxShape" id=10]
extents = Vector3( 2, 1.5, 0.15 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 2, 0.4, 1.95 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1.7, 0.05, 1.8 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 1.7, 1.45, 0.05 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 1.7, 1.45, 1.7 )

[node name="Robot Station" type="StaticBody"]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85, 1.5, 0.1 )
shape = SubResource( 9 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85, 1.5, 0.1 )
shape = SubResource( 9 )

[node name="Shell" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="Door" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 1.75 )
shape = SubResource( 2 )

[node name="Door Mesh" type="MeshInstance" parent="Door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.55, -1.75 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")

[node name="Occupied Light" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 3.4, 1.9 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Unoccupied Light" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 3.4, 1.9 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Close Door" = SubResource( 6 )
"anims/Instant Open Door" = SubResource( 13 )
"anims/Open Door" = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.85 )
shape = SubResource( 10 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, -0.05 )
shape = SubResource( 11 )

[node name="CollisionShape5" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0.1 )
shape = SubResource( 12 )

[node name="Door Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 1.75 )
collision_layer = 0
collision_mask = 192

[node name="Door" type="CollisionShape" parent="Door Area"]
shape = SubResource( 15 )

[node name="Interior Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Interior Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0 )
shape = SubResource( 14 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="body_exited" from="Door Area" to="." method="_on_Door_Area_body_exited"]
